# apache-ws

./: Makefile.am  README.md  configure.ac
apache/: Makefile.am
apache/src/: mod_apachews.c
common/: Makefile.am
common/include/: apache-ws-common.h
common/src/: apache-ws-common.c
debian/: changelog  control  install  postinst  postrm
debian/apache2/mods-available/: apachews.conf  apachews.load
php/: Makefile.am
php/include/: php-apachews.h
php/sample/: sample.php
php/src/: php-apachews.c
python/: Makefile.am
python/sample/: sample.py
python/src/: py-apache-ws.c
